# chroma_query

./: .gitignore  README.md  justfile  main.py  pyproject.toml
chroma_search/: default_docs.py  main.py
