[project]
name = "chroma-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.4",
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chroma_search"]

[project.scripts]
chroma-search = "chroma_search.main:app"
